--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <version>4.2.3.Final</version>
     </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.6.3</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -126,7 +131,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <source>1.6</source>
-          <target>1.6</target> 
+          <target>1.6</target>
         </configuration>
       </plugin>
       <!-- As we are doing "inplace" GWT compilation, ensure the widgetset -->
